force-app/main/default/objects/xDO_Demo_Configuration__c/xDO_Demo_Configuration__c.object-meta.xml
<CustomObject>
    <description>Configurations for a Demo</description>
    <label>Demo Configuration</label>
    <nameField>
        <label>Demo Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Demo Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>