force-app/main/default/objects/xDO_Demo_Configuration__c/fields/xDO_Accent_Color_3_HEX_Code__c.field-meta.xml
<CustomField>
    <fullName>xDO_Accent_Color_3_HEX_Code__c</fullName>
    <label>Accent Color 3 HEX Code</label>
    <length>7</length>
    <type>Text</type>
</CustomField>