force-app/main/default/objects/xDO_Demo_Configuration__c/fields/xDO_Active__c.field-meta.xml
<CustomField>
    <fullName>xDO_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active?</label>
    <type>Checkbox</type>
</CustomField>