force-app/main/default/objects/xDO_Demo_Configuration__c/fields/xDO_Brand_Image__c.field-meta.xml
<CustomField>
    <fullName>xDO_Brand_Image__c</fullName>
    <description>Asset File Unique Name that represents the brand image.</description>
    <inlineHelpText>Asset File Unique Name that represents the brand image.</inlineHelpText>
    <label>Brand Image</label>
    <length>100</length>
    <type>Text</type>
</CustomField>