force-app/main/default/objects/xDO_Demo_Configuration__c/fields/xDO_Brand_Image_Preview__c.field-meta.xml
<CustomField>
    <fullName>xDO_Brand_Image_Preview__c</fullName>
    <formula>IMAGE(&quot;/file-asset/&quot; + xDO_Brand_Image__c+ &quot;?v=1&quot;,xDO_Brand_Image__c,50, -1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Brand Image Preview</label>
    <type>Text</type>
</CustomField>