force-app/main/default/objects/xDO_Demo_Configuration__c/fields/xDO_Brand_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>xDO_Brand_Image_URL__c</fullName>
    <label>Brand Image URL</label>
    <length>100</length>
    <type>Text</type>
</CustomField>