force-app/main/default/objects/xDO_Demo_Configuration__c/fields/xDO_Default_Demo_Configuration__c.field-meta.xml
<CustomField>
    <fullName>xDO_Default_Demo_Configuration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this configuration is the default demo configuration for the org. Only one configuration can be marked as the default.</description>
    <inlineHelpText>Check this box only if this configuration should serve as the default demo configuration for the org. Only one configuration can be designated as the default. Custom demo configurations are not eligible to be marked as default.</inlineHelpText>
    <label>Default Demo Configuration</label>
    <type>Checkbox</type>
</CustomField>