force-app/main/default/objects/xDO_Demo_Configuration__c/fields/xDO_Demo_Build_Permission_Set__c.field-meta.xml
<CustomField>
    <fullName>xDO_Demo_Build_Permission_Set__c</fullName>
    <description>API name of the permission set to update during demo builds. This permission set will be auto-assigned to the Demo User when the demo is activated.</description>
    <inlineHelpText>Enter the API name of the permission set (e.g., ACM_Demo_Access)</inlineHelpText>
    <label>Demo Build Permission Set</label>
    <length>80</length>
    <type>Text</type>
</CustomField>