force-app/main/default/objects/xDO_Demo_Configuration__c/fields/xDO_Demo_User__c.field-meta.xml
<CustomField>
    <fullName>xDO_Demo_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the User who is associated with this demo configuration.</description>
    <inlineHelpText>Select the User associated with this demo configuration.</inlineHelpText>
    <label>Demo User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Demo Configurations</relationshipLabel>
    <relationshipName>Demo_Configurations</relationshipName>
    <type>Lookup</type>
</CustomField>