force-app/main/default/objects/xDO_Demo_Configuration__c/fields/xDO_Group_Image__c.field-meta.xml
<CustomField>
    <fullName>xDO_Group_Image__c</fullName>
    <description>Asset File Unique Name that represents the group image.</description>
    <inlineHelpText>Asset File Unique Name that represents the group image.</inlineHelpText>
    <label>Group Image</label>
    <length>100</length>
    <type>Text</type>
</CustomField>