force-app/main/default/objects/xDO_Demo_Configuration__c/fields/xDO_Group_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>xDO_Group_Image_URL__c</fullName>
    <label>Group Image URL</label>
    <length>100</length>
    <type>Text</type>
</CustomField>