force-app/main/default/objects/xDO_Demo_Configuration__c/fields/xDO_Logo__c.field-meta.xml
<CustomField>
    <fullName>xDO_Logo__c</fullName>
    <description>Asset File Unique Name that represents the logo.</description>
    <inlineHelpText>Asset File Unique Name that represents the logo.</inlineHelpText>
    <label>Logo</label>
    <length>100</length>
    <type>Text</type>
</CustomField>