force-app/main/default/objects/xDO_Demo_Configuration__c/fields/xDO_Logo_Preview__c.field-meta.xml
<CustomField>
    <fullName>xDO_Logo_Preview__c</fullName>
    <formula>IMAGE(&quot;/file-asset/&quot; + xDO_Logo__c+ &quot;?v=1&quot;,xDO_Logo__c,50, -1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logo Preview</label>
    <type>Text</type>
</CustomField>