force-app/main/default/objects/xDO_Demo_Configuration__c/fields/xDO_Logo_URL__c.field-meta.xml
<CustomField>
    <fullName>xDO_Logo_URL__c</fullName>
    <label>Logo URL</label>
    <length>100</length>
    <type>Text</type>
</CustomField>