force-app/main/default/objects/xDO_Demo_Configuration__c/fields/xDO_Override_Experience_Cloud_Branding__c.field-meta.xml
<CustomField>
    <fullName>xDO_Override_Experience_Cloud_Branding__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Select this checkbox to override the default Experience Cloud branding and apply custom styles or configurations.</inlineHelpText>
    <label>Override Experience Cloud Branding</label>
    <type>Checkbox</type>
</CustomField>