force-app/main/default/objects/xDO_Demo_Configuration__c/fields/xDO_Primary_Color_HEX_Code__c.field-meta.xml
<CustomField>
    <fullName>xDO_Primary_Color_HEX_Code__c</fullName>
    <label>Primary Color HEX Code</label>
    <length>7</length>
    <type>Text</type>
</CustomField>