force-app/main/default/objects/xDO_Demo_Configuration__c/fields/xDO_Unique_Name__c.field-meta.xml
<CustomField>
    <fullName>xDO_Unique_Name__c</fullName>
    <description>Formula field that converts the Name to underscore format (e.g., &quot;My Demo&quot; becomes &quot;My_Demo&quot;)</description>
    <formula>SUBSTITUTE(Name, &quot; &quot;, &quot;_&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Automatically converts the Demo Configuration Name by replacing spaces with underscores.</inlineHelpText>
    <label>Unique Name</label>
    <type>Text</type>
</CustomField>