force-app/main/default/objects/xDO_Demo_Configuration__c/fields/xDO_User_Image__c.field-meta.xml
<CustomField>
    <fullName>xDO_User_Image__c</fullName>
    <description>Asset File Unique Name that represents the user image.</description>
    <inlineHelpText>Asset File Unique Name that represents the user image.</inlineHelpText>
    <label>User Image</label>
    <length>100</length>
    <type>Text</type>
</CustomField>